mType/tests/testFiles/cast/error/primitiveToObjectCast.mt
// Error: Cannot cast primitive to object
class MyClass {}
int x = 42;
MyClass obj = (MyClass)x;
